# 13-Dead-End-Drive

./: .cursorrules  .dependency-cruiser.cjs  .dockerignore  .env.docker.example  .env.example  .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.context/: README.md  ai_skills.md  api_contracts.md  board_rules_13_ded.md  database_schema.md  gdd_technical_blueprint.md  play_modes.md  project_proposal.md  prompt_playbook.md  sdd.md  srs.md  system_state.md
.context/rfc/: rfc_001_spatial_engine.md  rfc_002_trap_triggers.md  rfc_003_card_validation.md  rfc_004_supabase_persistence.md  rfc_005_colyseus_nest_transport.md  rfc_006_clean_architecture.md  rfc_007_advanced_rule_engine.md
.github/workflows/: ci.yml
apps/game-server/: Dockerfile  package.json  tsconfig.json
config/: ded-vite-aliases.ts
data/: gdd_board_nodes.json  gdd_trap_deck.json
data/fixtures/: bot-decision-request.sample.json
docker/: client.Dockerfile  nginx.conf
docs/: DEVELOPER_SETUP.md  HOW_TO_PLAY.md
docs/jira/: ded-jira-backlog-historical.csv  ded-jira-backlog-mvp.csv  ded-jira-import-readme.md
docs/requirements/: G01_digital_multiplayer_srs.md
scripts/: import-backlog-to-github-project.mjs
services/bot-ai/: Dockerfile  pyproject.toml
services/bot-ai/app/: __init__.py  config.py  decide.py  main.py  schemas.py
services/bot-ai/app/strategies/: heuristic.py  llm.py
services/bot-ai/tests/: test_decide.py  test_golden_fixture.py
src/: vite-env.d.ts
src/bots/: types.ts  (+3 more)
(+175 files in other folders)
